[gd_scene load_steps=2 format=3 uid="uid://ctswbhe2o2lq"]

[ext_resource type="Script" path="res://menus/ActionMenu.gd" id="1_rcamp"]

[node name="ActionMenu" type="PanelContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 280.0
offset_right = -320.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rcamp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Choose your action"
horizontal_alignment = 1

[node name="RecruitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Recruit"

[node name="SupportButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add Support"

[node name="AttackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Attack"

[node name="EndTurnButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "End Turn"

[connection signal="pressed" from="MarginContainer/VBoxContainer/RecruitButton" to="." method="_on_recruit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SupportButton" to="." method="_on_support_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
